feat: 缩短会议号格式
